# vksdk-modbus

./: CMakeLists.txt  README.md  main.cpp  rk356x-uart4-m1.dts
LINUX/: Makefile  demo.c
LINUX/port/: portserial.c
modbus/: mb.c
modbus/functions/: mbfuncinput.c  mbfuncother.c
modbus/rtu/: mbrtu.c
port/: portserial.c
